2007-09-30  Paul J Stevens <paul@nfg.nl>

	* dbmail.h.in:
	fix bug #643

2007-09-23  Aaron Stone  <aaron@serendipity.cx>

	* modules/sortsieve.c:
	Comment out send_alert for execution errors (always caused by
	malformed addresses at this time, and very annoying).
	Clean up the send_notify function and clarify that it is unsupported
	at this time.

2007-09-18  Paul J Stevens <paul@nfg.nl>

	* VERSION:
	tag and release 2.2.7-rc1

2007-09-16  Paul Stevens <paul@nfg.nl>

	* ChangeLog, misc.c:
	fix regression

2007-09-15  Paul J Stevens <paul@nfg.nl>

	* debian/changelog, debian/control, debian/dbmail.postinst, 
	debian/dbmail.postrm, debian/patches/00-etch.dpatch, 
	debian/patches/00list, debian/rules:
	debian updates
	* debian/changelog:
	v2.2.6
	* ChangeLog:
	blah

2007-09-14  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_message.c, db.c, dbmail-imapsession.c, misc.c:
	valgrind cleanups

2007-09-05  Paul J Stevens <paul@nfg.nl>

	* db.c:
	fix regression for bug #634 (bug #642)

2007-09-02  Paul J Stevens <paul@nfg.nl>

	* sql/postgresql/create_tables.pgsql, 
	sql/postgresql/migrate_from_2.0_to_2.2.pgsql:
	fix typo

2007-08-31  Paul J Stevens <paul@nfg.nl>
	* check_dbmail_db.c, db.c:
	fix regression for bug #639 (bug #641)

2007-08-27  Paul J Stevens <paul@nfg.nl>
	* db.c, db.h, dbmail-mailbox.c, dbmail.h.in, dbmailtypes.h, 
	man/Makefile.in, modules/dbmysql.c, modules/dbpgsql.c, 
	modules/dbsqlite.c, sql/postgresql/create_tables.pgsql, 
	sql/postgresql/migrate_from_2.0_to_2.2.pgsql:
	add partial index to headervalue field (bug #634)

2007-08-26  Paul J Stevens <paul@nfg.nl>

	* memblock.c, memblock.h:
	memblock cleanup (bug #628)

2007-08-24  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_db.c, db.c:
	escape underscore in mailbox names during matching (bug #639)

2007-08-13  Aaron Stone  <aaron@serendipity.cx>

	* modules/sortsieve.c:
	More testing and better debugging on fix for bug #632.

2007-08-07  Aaron Stone  <aaron@serendipity.cx>

	* sievecmd.c: